<resources>
    <string name="app_name">Test app</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="enter_name">Please, enter name here</string>
    <string name="age">Age</string>
    <string name="enter_age">Please, enter age here</string>
    <string name="salary">Yearly Salary</string>
    <string name="enter_salary">Please, enter yearly salary here</string>
    <string name="occupation">Occupation</string>
    <string name="enter_occupation">Please, enter occupation here</string>
    <string name="photo">Photo</string>
    <string name="enter_photo_url">Please, enter photo URL here</string>
    <string name="default_notification_channel">Default Channel</string>
</resources>
